feat: implemented new utils for route manage and me api
